[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/testNPC.gd" type="Script" id=2]
[ext_resource path="res://Sprites/interaction.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="CircleShape2D" id=2]
radius = 9.0

[node name="testNPC" type="Node2D"]
script = ExtResource( 2 )

[node name="npc" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collision"]
shape = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="NPC Collider" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="InteractPrompt" type="Sprite" parent="InteractionArea"]
visible = false
position = Vector2( 0, -9 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
